--- a/pedido-movel/src/theme/variables.scss
+++ b/pedido-movel/src/theme/variables.scss
@@ -11,6 +11,9 @@ $font-path: "../assets/fonts";
 // the Sass variables found in Ionic's source scss files.
 // To view all the possible Ionic variables, see:
 // http://ionicframework.com/docs/v2/theming/overriding-ionic-variables/
+$toolbar-background: #009999;
+$toolbar-md-height: 100px;
+$toolbar-text-color: #fff;
 
 
 
