--- a/pedido-movel/src/app/app.scss
+++ b/pedido-movel/src/app/app.scss
@@ -21,24 +21,17 @@
     background-image: url(/assets/img/logo-light.png);
     background-repeat: no-repeat;
     background-position: center center;
-    display: block;
-    position: relative;
 }
 
 .basket {
     float: right;
     font-size: 36px;
     color: #fff;
-    height: 100px;
-    max-height: 100px;
-    display: block;
-    position: relative;
 }
 
 .basket-text {
     font-size: 20px !important;
     font-family: "Open Sans";
     text-align: center;
-    height: 100px;
-    max-height: 100px;
+    text-transform: none;
 }
