Adicionando cards a pagina inicial

--- a/pedido-movel/src/app/app.scss
+++ b/pedido-movel/src/app/app.scss
@@ -35,3 +35,10 @@
     text-align: center;
     text-transform: none;
 }
+
+.card-campanha {
+    height: 350px;
+}
+.card-categoria {
+    height: 100%;
+}
