--- a/pedido-movel/src/theme/variables.scss
+++ b/pedido-movel/src/theme/variables.scss
@@ -16,6 +16,9 @@ $toolbar-md-height: 100px;
 $toolbar-text-color: #fff;
 
 $background-color: #D8D8D8;
+$card-md-background-color: #fff;
+$card-md-header-color: #008267;
+$card-md-header-margin-bottom: 2px;
 
 
 
