Botões tela inicial
Ajustando o tamanho dos botões

--- a/pedido-movel/src/app/app.scss
+++ b/pedido-movel/src/app/app.scss
@@ -29,7 +29,12 @@
     color: #fff;
 }
 
-.basket-text {
+.buttons-footer {
+    font-size: 24px;
+    color: #fff;
+}
+
+.buttons-text {
     font-size: 20px !important;
     font-family: "Open Sans";
     text-align: center;
