Navegação, layout e consulta de produtos
Ajustando a consulta de produtos para que seja feita sempre pela tela de produtos.
Criado botão na tela inicial para levar para a página de produtos.
Ajustando layout dos botões.

--- a/pedido-movel/src/app/app.scss
+++ b/pedido-movel/src/app/app.scss
@@ -23,14 +23,16 @@
     background-position: center center;
 }
 
-.basket {
+.buttons-header {
     float: right;
+    margin: 10px;
     font-size: 36px;
     color: #fff;
 }
 
 .buttons-footer {
     font-size: 24px;
+    margin: 10px;
     color: #fff;
 }
 
