--- a/pedido-movel/src/app/app.scss
+++ b/pedido-movel/src/app/app.scss
@@ -43,4 +43,19 @@
     text-transform: none;
 }
 
+.card-item-edges {
+    border:2px solid #D8D8D8;
+    padding: 20px;
+    height:100px;
+    background-color: #FFF !important;
+}
+
+.card-campanha-content {
+    height: 400px;
+    background-color: #D8D8D8;
+    margin: auto;
+}
+
+
+
 
