tela de busca de produtos

--- a/pedido-movel/src/app/app.scss
+++ b/pedido-movel/src/app/app.scss
@@ -72,6 +72,24 @@
     margin-left: 2px;
 }
 
+.button-detail{
+    background-color: #FFF;
+    border-radius: 40px;
+    border: 2px solid  #CCCCCC;
+    width: 100px;
+    height: 30px;
+    color: black;
+    font-family: Open Sans;
+}
+.ion-item-checkbox{
+   background-color: #FFF !important;
+   margin-right: 0px !important; 
+
+   padding: 0,0,0,0 !important; 
+   width: 50px !important;
+}
+
+
 
 
 
