--- a/pedido-movel/src/theme/variables.scss
+++ b/pedido-movel/src/theme/variables.scss
@@ -21,6 +21,11 @@ $card-md-header-color: #008267;
 $card-md-header-margin-bottom: 2px;
 
 
+$checkbox-md-icon-border-width: 0px;
+$checkbox-md-icon-background-color-on: #D8D8D8; //mesma cor de fundo para fazer o efeito
+$checkbox-md-icon-size: 12px;
+$checkbox-md-icon-checkmark-color:#697882;
+
 
 
 // Named Color Variables
