--- a/pedido-movel/src/app/app.scss
+++ b/pedido-movel/src/app/app.scss
@@ -83,7 +83,7 @@
     font-family: "Open Sans";
 }
 
-.label-column-list-produtos{
+.label-column-list{
     font-size: 12px !important;
     font-family: "Open Sans";
     text-align: left;
@@ -108,5 +108,10 @@
     color: black;
 }
 
-
-
+.item-column-list-clientes{
+    font-size: 15px !important;
+    font-style: bold;
+    font-family: "Open Sans";
+    text-align: left;
+    color: #333333;
+}
