--- a/pedido-movel/src/app/app.scss
+++ b/pedido-movel/src/app/app.scss
@@ -180,6 +180,14 @@
     border-radius: 4px;
 }
 
+.input-error{
+    border: 1px solid #c13018;
+}
+
+.msg-error{
+    color: #c13018;
+}
+
 .form-label{
     font-size: 14px !important;
     font-family: "Open Sans";
