--- a/pedido-movel/src/app/app.scss
+++ b/pedido-movel/src/app/app.scss
@@ -239,3 +239,10 @@
     max-width: 100%; 
     padding-left: 0px;
 }
+
+.pedido-total-valor {
+    font-weight: 700 !important;
+    font-family: "Open Sans";
+    text-align: left;
+    color: black;
+}
