nome do app e imgs no tablet

--- a/pedido-movel/src/app/app.scss
+++ b/pedido-movel/src/app/app.scss
@@ -18,7 +18,7 @@
 .logo-default {
     width: 123px;
     height: 40px;
-    background-image: url(/assets/img/logo-light.png);
+    background-image: url(../assets/img/logo-light.png);
     background-repeat: no-repeat;
     background-position: center center;
 }
