--- a/pedido-movel/src/theme/variables.scss
+++ b/pedido-movel/src/theme/variables.scss
@@ -48,7 +48,9 @@ $colors: (
   secondary:  #32db64,
   danger:     #f53d3d,
   light:      #f4f4f4,
-  dark:       #222
+  dark:       #222,
+  bostonblue: #428bca,
+  gothic: #7892a1
 );
 
 
