--- a/pedido-movel/src/app/app.scss
+++ b/pedido-movel/src/app/app.scss
@@ -18,7 +18,7 @@
 .logo-default {
     width: 123px;
     height: 40px;
-    background-image: url(/assets/img/logo-light.png);
+    background-image: url(../assets/img/logo-light.png);
     background-repeat: no-repeat;
     background-position: center center;
 }
@@ -171,7 +171,7 @@
 }
 
 .botao-primario{
-    background-color: #428bca;
+    text-transform: none !important;
     color: #fff;
     font-family: "Open Sans";
     border-radius: 4px;
@@ -182,7 +182,7 @@
 }
 
 .botao-secundario{
-    background-color: #7892a1;
+    text-transform: none !important;
     color: #fff;
     font-family: "Open Sans";
     border-radius: 4px;
