--- a/pedido-movel/src/app/app.scss
+++ b/pedido-movel/src/app/app.scss
@@ -58,7 +58,7 @@
 .card-item-produto-edges {
     border:1px solid #CCCCCC;
     padding: 5px;
-    height:100px;
+    height:80px;
     background-color: #FFF !important;
     margin-bottom: 10px;
 }
@@ -133,6 +133,11 @@
     font-family: "Open Sans";
     text-align: left;
     color: #333333;
+    text-overflow: ellipsis !important;
+    white-space: nowrap;
+    overflow: hidden;
+    display: inline-block;
+    width:95% !important;
 }
 
 .col-80px {
