imagens dos produtos

--- a/pedido-movel/src/components/productList.html
+++ b/pedido-movel/src/components/productList.html
@@ -15,7 +15,7 @@
             <input type="checkbox" [(ngModel)]="product.selecionado">
           </ion-col>
           <ion-col class="col-80px" (click)="alterarSelecaoProduto(product)">
-            <img src="/assets/img/geladeira.png" style="width: 70px; height: 70px;">
+            <img src="assets/img/geladeira.png" style="width: 70px; height: 70px;">
           </ion-col>
           <ion-col col-5 col-auto (click)="alterarSelecaoProduto(product)" align-self-center>
             <span class="produto-column-list-produtos" style="width: 100%">{{product.nome}}</span><br>
