--- a/pedido-movel/src/components/productList.html
+++ b/pedido-movel/src/components/productList.html
@@ -30,7 +30,7 @@
             <span class="produto-column-list-produtos">{{product.preco | brcurrency}}</span>
           </ion-col>
           <ion-col align-self-center>
-            <button (click)="exibirDetalhes()" class="button-detail">Detalhes</button>
+            <button (click)="exibirDetalhes(product)" class="button-detail">Detalhes</button>
           </ion-col>
         </ion-row>
       </ion-grid>
