--- a/pedido-movel/src/theme/variables.scss
+++ b/pedido-movel/src/theme/variables.scss
@@ -29,6 +29,10 @@ $card-ios-background-color: #fff;
 $card-ios-header-color: #008267;
 $card-ios-header-margin-bottom: 2px;
 
+$segment-button-ios-height: 3.2rem;
+$segment-button-md-line-height:	6rem;
+
+
 
 $checkbox-md-icon-border-width: 0px;
 $checkbox-md-icon-background-color-on: #D8D8D8; //mesma cor de fundo para fazer o efeito
