--- a/pedido-movel/src/app/app.scss
+++ b/pedido-movel/src/app/app.scss
@@ -70,6 +70,14 @@
     margin: auto;
 }
 
+.card-campanha-content-2 {
+    height: 400px;
+    background-size: 100% 100%;
+    background-image: url(../assets/img/promocao2.png);
+    background-repeat: none;
+    margin: auto;
+}
+
 .card-produto-detail-content{
     margin: auto;
 }
