modal para identificar o cliente 2

--- a/pedido-movel/src/app/app.scss
+++ b/pedido-movel/src/app/app.scss
@@ -82,6 +82,13 @@
     margin: auto;
 }
 
+.card-identificar-cliente{
+    margin: 0px !important;
+    margin-right: 0px !important; 
+    width: 100% !important;
+    height: 100% !important;
+}
+
 .primeira-coluna-detail-produto{
     display: inline-block;
     width: 40%;
