--- a/pedido-movel/src/theme/variables.scss
+++ b/pedido-movel/src/theme/variables.scss
@@ -44,6 +44,12 @@ $checkbox-ios-icon-size: 12px;
 $checkbox-ios-icon-checkmark-color:#697882;
 
 
+$modal-inset-height-small:	200px;	
+$modal-inset-height-large:	200px;
+
+
+
+
 // Named Color Variables
 // --------------------------------------------------
 // Named colors makes it easy to reuse colors on various components.
