--- a/pedido-movel/src/theme/variables.scss
+++ b/pedido-movel/src/theme/variables.scss
@@ -32,6 +32,7 @@ $card-ios-header-margin-bottom: 2px;
 $segment-button-ios-height: 3.2rem;
 $segment-button-md-line-height:	6rem;
 
+$badge-font-size: 18px;
 
 
 $checkbox-md-icon-border-width: 0px;
