--- a/pedido-movel/src/components/buttonPedido.html
+++ b/pedido-movel/src/components/buttonPedido.html
@@ -6,6 +6,9 @@
         <span class="buttons-text">
           Itens do pedido
         </span>
-        <span class="fa fa-fw fa-shopping-basket buttons-header"></span>
+        <div style="display: inline-block;">
+          <span class="fa fa-fw fa-shopping-basket buttons-header"></span>
+          <ion-badge color="danger" style="position: absolute; right: 10px; top: 2px;" item-end>{{getQuantidadeProdutos()}}</ion-badge>
+        </div>
       </button>
 </ion-buttons>
