margem no card de produtos

--- a/pedido-movel/src/app/app.scss
+++ b/pedido-movel/src/app/app.scss
@@ -284,9 +284,14 @@
     padding-bottom: 0px !important;
 }
 
+.card-default{
+    margin-bottom: 60px;
+}
+
 .pedido-total-valor {
     font-weight: 700 !important;
     font-family: "Open Sans";
     text-align: left;
     color: black;
 }
+
