--- a/pedido-movel/src/components/productList.html
+++ b/pedido-movel/src/components/productList.html
@@ -1,4 +1,4 @@
-<ion-card>
+<ion-card class="card-default">
     <ion-card-header>
       {{cardTitle}}
       <button (click)="addProducts()" ion-button round small style="float: right;">
